--- a/TODO
+++ b/TODO
@@ -5,10 +5,9 @@ Important:
 ----------
 * Show internet IP (instead or both)
 * Better Launcher activity + 'load prefences and Don't show this again' checkbox.
-* Disable Wi-Fi/Disable Flight buttons in main PreferencesActivity
 * New Custom Notification - more info & Custom notification with Wi-Fi/Flight/Mobile switch.
 * "Are you sure you want to reset settings?" question
-* ActionBar in PreferenceActivity with Contact/Share/WiFi Buttons (or whatever)
+* ActionBar in PreferenceActivity with Contact/Share/WiFi/Airplane Buttons (or whatever)
 
 Later:
 ------
